Fixed button alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,7 +92,7 @@ button {
 }
 
 .fields-button {
-    margin-left: 100px
+    margin-left: 104px
 }
 
 td, th {
